<resources>
    <string name="app_name">transporte_pay</string>
    <string name="app_client">Elizabeth Joy Transport</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="register1">Sign In</string>
    <string name="logout">Log Out</string>
    <string name="register">Click Here to Sign Up</string>
    <string name="login_link">Click Here to Sign In</string>
    <string name="or">or</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="gcash">Gcash#</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="locations">%1$s to %2$s</string>

    <string name="TermsAndAConditions">I hereby authorize Elizabeth Joy Transport to collect and process the data indicated herein for the purpose of contact tracing effecting control of the COVID-19 transmission. I understand that my personal information is protected by RA 10173 or the Data Privacy Act of 2012 and that this form will be destroyed after 30 days from the date accpmplishment, following the National Archives of the Philippines protocol.</string>
    <string name="trace_title">Contact Tracing Form</string>
    <string name="address">Complete Address</string>
    <string name="date_of_visit">Date Of Visit</string>
    <string name="time_of_visit">Time of Visit</string>
    <string name="temperature">Temperature</string>
    <string name="contact_number">Contact Number</string>
    <string name="save">Save</string>
    <string name="booking_details">Booking Details</string>
    <string name="bus_location">Bus Location</string>
    <string name="contact_tracing">Contact Tracing</string>
    <string name="account_details">Account Details</string>
    <string name="view_passengers">View Passengers</string>
    <string name="destination_logs">Destination Logs</string>
    <string name="bus">Bus Gcash#</string>
    <string name="referencenumber">Ref#</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_conductor_maps">ConductorMapsActivity</string>

    //

</resources>